--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -151,6 +151,7 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        z-index: 2;
     }
     .header__desc {
         width: 100%;
