--- a/src/scss/blocks/_switcher.scss
+++ b/src/scss/blocks/_switcher.scss
@@ -39,7 +39,7 @@
     .switcher {
         max-width: 150px;
         height: 53px;
-
+        top: 150px;
         &__toggler {
             width: 63px;
             height: 75%;
