--- a/src/scss/blocks/_burger.scss
+++ b/src/scss/blocks/_burger.scss
@@ -40,7 +40,8 @@
 
 .mob-menu {
     position: absolute;
-    opacity: 0;
+    pointer-events: none;
+    // opacity: 0;
     top: 0;
     left: 0;
     width: 100%;
@@ -52,7 +53,7 @@
     &--active {
         opacity: 1;
 
-        z-index: 1;
+        z-index: 2;
     }
 
     &__container {
