--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -284,7 +284,7 @@
         h2 {
             background: $purple-to-pink;
             background-clip: text;
-            font-size: 40px;
+            // font-size: 40px;
             font-style: normal;
             font-weight: bold;
             -webkit-text-fill-color: transparent;
@@ -293,7 +293,7 @@
         p {
             margin-top: 20px;
             color: $purple-text;
-            font-size: 20px;
+            // font-size: 20px;
             font-style: normal;
             font-weight: 400;
         }
@@ -445,13 +445,13 @@
         }
 
         &__text {
-            h2 {
-                font-size: 39.468px;
-            }
+            // h2 {
+            //     font-size: 39.468px;
+            // }
 
-            p {
-                font-size: 19.734px;
-            }
+            // p {
+            //     font-size: 19.734px;
+            // }
         }
 
         &__tabs {
@@ -500,6 +500,12 @@
     .second-screen {
         &__buttons {
             flex-wrap: wrap;
+        }
+
+        &__text {
+            // h2 {
+            //     font-size: 26px;
+            // }
         }
     }
 }
@@ -595,6 +601,7 @@
 @media(max-width: 1000px) {
     .third-screen {
         height: 100vh;
+
         &::before {
             opacity: 1;
         }
@@ -661,7 +668,7 @@
         background: url(../../img/Product-page/4-screen-bg1.png) no-repeat center center / cover;
         filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.20));
         border-radius: 40px;
-
+        overflow: hidden;
     }
 
     &__rama {
@@ -815,11 +822,44 @@
                 left: 50%;
                 transform: translateX(-50%);
             }
+
+            &__rama-item {
+                width: 80%;
+                max-width: 400px;
+                transform: translate(-45%, -50%);
+            }
+
+            &__buttons {
+                top: unset;
+                bottom: 60px;
+                transform: translateX(-43%);
+                left: 50%;
+                max-width: calc(100% - 100px);
+                gap: 15px;
+            }
         }
-
-
     }
 }
+
+@media(max-width: 1000px) {
+    .four-screen {
+        &__rama-item {
+            width: 80%;
+            max-width: 400px;
+            transform: translate(-45%, -50%);
+        }
+
+        &__buttons {
+            top: unset;
+            bottom: 60px;
+            transform: translateX(-43%);
+            left: 50%;
+            max-width: calc(100% - 100px);
+            gap: 15px;
+        }
+    }
+}
+
 
 // Пятый экран
 
@@ -896,6 +936,7 @@
             top: 0;
         }
     }
+
 }
 
 
@@ -943,6 +984,81 @@
     &__img {
         width: 100%;
     }
+}
+.rent-content__title.dop-screen2__title {
+    font-size: 44.34px;
+    font-weight: 400;
+}
+.rent-content__tabs.dop-screen2__tabs {
+    margin-top: 16px;
+    flex-wrap: wrap;
+}
+.rent-content__tab.dop-screen2__tab {
+    width: unset;
+    max-width: unset;
+    padding: 0 40px;
+
+}
+
+@media(max-width: 1240px) {
+    .second-screen__button.dop-screen2__button {
+        padding: 13px 0;
+        font-size: 13px;
+    }
+}
+
+@media(max-width: 1195px) {
+    .rent-content__tabs.dop-screen2__tabs {
+        margin-top: 10px;
+        flex-wrap: wrap;
+        row-gap: 20px;
+    }
+    .rent-content__tab.dop-screen2__tab {
+        width: 100%;
+        max-width: 50%;
+        padding: 0 36px;
+    }
+}
+
+@media(max-width: 1000px) {
+    .dop-screen2 {
+        &__content-wrapper {
+            flex-direction: column-reverse;
+        }
+
+        &__part {
+            width: 100%;
+        }
+
+        &__left-part {
+            margin-top: 40px;
+        }
+    }
+}
+
+@media(max-width: 640px) {
+    .dop-screen2__left-part {
+        margin-top: 17px;
+    }
+    .rent-content__title.dop-screen2__title {
+        font-size: 24px;
+    }
+    .dop-screen2__tab-contents {
+        margin-top: 7px;
+    }
+    .dop-screen2__tab-content {
+        font-size: 14px;
+    }
+    // .rent-content__tabs.dop-screen2__tabs {
+    //     margin-top: 10px;
+    //     flex-wrap: wrap;
+    //     row-gap: 20px;
+    // }
+    // .rent-content__tab.dop-screen2__tab {
+    //     width: 100%;
+    //     max-width: 50%;
+    //     padding: 0 36px;
+    // }
 }
 
 
