--- a/src/scss/ui/_text.scss
+++ b/src/scss/ui/_text.scss
@@ -17,6 +17,7 @@
         font-size: 8px;
         letter-spacing: 0.384px;
     }
+
     @media (max-width: 1167px) {
         font-size: 7px;
         letter-spacing: 0.587px;
@@ -50,3 +51,29 @@
 
     // }
 }
+
+.title-section {
+    font-size: 40px;
+    @media(max-width: 1024px) {
+        font-size: 30px;
+    }
+    @media(max-width: 700) {
+        font-size: 20px;
+    }
+    @media(max-width: 400px) {
+        font-size: 15px;
+    }
+}
+.desc-section {
+    font-size: 20px;
+    @media(max-width: 1440) {
+        font-size: 15px;
+    }
+    @media(max-width: 550) {
+        font-size: 11px;
+    }
+    @media(max-width: 400px) {
+        font-size: 10px;
+    }
+}
+
