--- a/src/scss/blocks/_burger.scss
+++ b/src/scss/blocks/_burger.scss
@@ -1,109 +1,108 @@
 .burger {
-    background-color: #fff;
-    width: 50px;
-    height: 38px;
-    border-radius: 10px;
-    position: relative;
+	background-color: #fff;
+	width: 50px;
+	height: 38px;
+	border-radius: 10px;
+	position: relative;
 
-    &__center-stick {
-        background: linear-gradient(57deg, #1D0C33 0%, #D283EA 100%);
-        height: 2px;
-        width: 20px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        border-radius: 15px;
-    }
+	&__center-stick {
+		background: linear-gradient(57deg, #1d0c33 0%, #d283ea 100%);
+		height: 2px;
+		width: 20px;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		border-radius: 15px;
+	}
 
-    &::after,
-    &::before {
-        content: '';
-        position: absolute;
-        background: linear-gradient(57deg, #1D0C33 0%, #D283EA 100%);
-        height: 2px;
-        width: 20px;
-        position: absolute;
-        border-radius: 15px;
-        left: 50%;
-        transform: translate(-50%);
-    }
+	&::after,
+	&::before {
+		content: "";
+		position: absolute;
+		background: linear-gradient(57deg, #1d0c33 0%, #d283ea 100%);
+		height: 2px;
+		width: 20px;
+		position: absolute;
+		border-radius: 15px;
+		left: 50%;
+		transform: translate(-50%);
+	}
 
-    &::after {
-        top: calc(50% - 7px);
-    }
+	&::after {
+		top: calc(50% - 7px);
+	}
 
-    &::before {
-        top: calc(50% + 5px);
-    }
+	&::before {
+		top: calc(50% + 5px);
+	}
 }
 
 .mob-menu {
-    position: absolute;
-    pointer-events: none;
-    // opacity: 0;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    border-radius: 11px;
-    transition: .3s;
-    z-index: 0;
-    &--active {
-        opacity: 1;
+	position: fixed;
+	pointer-events: none;
+	opacity: 0;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: #fff;
+	border-radius: 11px;
+	transition: 0.3s;
+	z-index: 0;
+	&--active {
+		opacity: 1;
+		z-index: 2;
+	}
 
-        z-index: 2;
-    }
+	&__container {
+		height: 100%;
+		max-height: 560px;
+		padding: 28px 30px;
+		padding-top: 21px;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		gap: 30px;
+	}
 
-    &__container {
-        height: 100%;
-        max-height: 560px;
-        padding: 28px 30px;
-        padding-top: 21px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        gap: 30px;
-    }
+	&__header {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+	}
 
-    &__header {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-    }
+	&__nav {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+		max-height: 470px;
+		height: 100%;
+		width: 100%;
+		gap: 10px;
+	}
 
-    &__nav {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        max-height: 470px;
-        height: 100%;
-        width: 100%;
-        gap: 10px
-    }
+	&__items {
+		color: $purple-text;
+		font-size: 22px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: normal;
+		letter-spacing: 1.32px;
+		text-transform: uppercase;
+	}
 
-    &__items {
-        color: $purple-text;
-        font-size: 22px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-        letter-spacing: 1.32px;
-        text-transform: uppercase;
-    }
-
-    &__buttons {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-    }
-    &__button {
-        max-width: 360px;
-        width: 100%;
-        font-size: 16px;
-        text-transform: capitalize;
-    }
+	&__buttons {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+	}
+	&__button {
+		max-width: 360px;
+		width: 100%;
+		font-size: 16px;
+		text-transform: capitalize;
+	}
 }
