--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,163 +1,160 @@
 .header {
-    width: 100%;
-    position: fixed;
-    z-index: 1;
-    top: 30px;
-    padding: 0 100px;
-    transition: .3s all;
+	width: 100%;
+	position: fixed;
+	z-index: 1;
+	top: 30px;
+	padding: 0 100px;
+	transition: 0.3s all;
 
-    &__desc {
-        width: 100%;
-        transition: .3s all;
-        background-color: #fff;
-        border-radius: 25px;
-        box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.20);
-    }
+	&__desc {
+		width: 100%;
+		transition: 0.3s all;
+		background-color: #fff;
+		border-radius: 25px;
+		box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.2);
+	}
 
-    &__wrapper {
-        display: flex;
-        flex-direction: row;
-        padding: 11px 15px 11px 45px;
-        justify-content: space-between;
-        gap: 40px;
-        align-items: center;
-    }
+	&__wrapper {
+		display: flex;
+		flex-direction: row;
+		padding: 11px 15px 11px 45px;
+		justify-content: space-between;
+		gap: 40px;
+		align-items: center;
+	}
 
-    &__menu {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        gap: 52px;
-    }
+	&__menu {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		gap: 52px;
+	}
 
-    &__nav {
-        // max-width: 750px;
-        width: 100%;
-    }
+	&__nav {
+		// max-width: 750px;
+		width: 100%;
+	}
 
-    &__contacts {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        gap: 20px;
-    }
+	&__contacts {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		gap: 20px;
+	}
 
-    &__logo {
-        width: 134px;
+	&__logo {
+		width: 134px;
 
-        @media (max-width: 1919px) {
-            width: 100px;
-        }
+		@media (max-width: 1919px) {
+			width: 100px;
+		}
 
-        @media (max-width: 1439px) {
-            width: 71px;
-        }
+		@media (max-width: 1439px) {
+			width: 71px;
+		}
 
-        @media (max-width: 1000px) {
-            &--mob {
-                width: 117px;
-            }
+		@media (max-width: 1000px) {
+			&--mob-scroll {
+				padding: 0 0 0 10px;
+			}
+			&--mob-top {
+				background-color: white;
+				border-radius: 10px;
+				box-shadow: 0px 0px 3.64583px 0px rgba(0, 0, 0, 0.2);
+				padding: 5px 7px;
+			}
 
-            &--mob-menu {
-                width: 175px;
-            }
-        }
+			&--mob-menu {
+				width: 175px;
+			}
+		}
 
-        // @media (max-width: 1750px) {}
-
-    }
+		// @media (max-width: 1750px) {}
+	}
 }
 
 .header.active {
-    padding: 0px;
-    top: 0;
+	padding: 0px;
+	top: 0;
 
-    .header__desc {
-        border-radius: 0;
-    }
-
+	.header__desc {
+		border-radius: 0;
+	}
 }
 
 .header-contacts {
-    display: flex;
-    justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 
-    &__calls {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-    }
+	&__calls {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+	}
 
-    &__buttons {
-        display: flex;
-        flex-direction: row;
-        gap: 20px;
-        justify-content: space-between;
-        max-width: 380px;
-        width: 100%;
-    }
+	&__buttons {
+		display: flex;
+		flex-direction: row;
+		gap: 20px;
+		justify-content: space-between;
+		max-width: 380px;
+		width: 100%;
+	}
 }
 
 @media (max-width: 1750px) {
-    .header {
+	.header {
+		&__wrapper {
+			gap: 20px;
+		}
 
+		&__nav {
+			max-width: 1027px;
+		}
 
-        &__wrapper {
-            gap: 20px;
-        }
+		&__menu {
+			gap: 20px;
+		}
+	}
 
-        &__nav {
-            max-width: 1027px;
-        }
-
-        &__menu {
-            gap: 20px;
-        }
-    }
-
-    .header-contacts {
-
-
-        &__buttons {
-            display: flex;
-            flex-direction: row;
-            gap: 15px;
-            max-width: 285px;
-        }
-    }
-
+	.header-contacts {
+		&__buttons {
+			display: flex;
+			flex-direction: row;
+			gap: 15px;
+			max-width: 285px;
+		}
+	}
 }
 
 @media (max-width: 1167px) {
-    .header__wrapper {
-        padding: 11px 15px 11px 15px;
-        gap: 0;
-    }
+	.header__wrapper {
+		padding: 11px 15px 11px 15px;
+		gap: 0;
+	}
 
-    .header__menu {
-        gap: 0;
-    }
+	.header__menu {
+		gap: 0;
+	}
 }
 
-
 @media (max-width: 1000px) {
-
-    .header {
-        padding: 0 20px;
-        background-color: unset;
-        border-radius: unset;
-        box-shadow: unset;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        z-index: 2;
-    }
-    .header__desc {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        background-color: unset;
-    }
+	.header {
+		padding: 0 20px;
+		background-color: unset;
+		border-radius: unset;
+		box-shadow: unset;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		z-index: 2;
+	}
+	.header__desc {
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		background-color: unset;
+	}
 }
