--- a/src/scss/options/_common.scss
+++ b/src/scss/options/_common.scss
@@ -1,168 +1,187 @@
 .container-page-margin {
-    width: calc(100vw - 56px);
-    // max-width: 1825px;
-    height: calc(100vh - 36px);
-    // margin: 0 auto;
-    position: relative;
-    max-height: 969px;
-    max-width: 1825px;
-    margin: 20px auto;
-    // transition: .3s;
+	width: calc(100vw - 56px);
+	// max-width: 1825px;
+	height: calc(100vh - 36px);
+	// margin: 0 auto;
+	position: relative;
+	max-height: 969px;
+	max-width: 1825px;
+	margin: 20px auto;
+	// transition: .3s;
 
-    @media (max-width: 1000px) {
-        max-height: unset;
-        width: calc(100% - 20px);
-        height: unset;
-        margin: 10px auto;
-
-    }
+	@media (max-width: 1000px) {
+		max-height: unset;
+		width: calc(100% - 20px);
+		height: unset;
+		margin: 10px auto;
+	}
 }
 
-
-
 .footer-container {
-    padding: 58px 156px 147px;
-    width: 100%;
-    position: relative;
-    // padding-top: 58px;
-    // padding-bottom: 147px;
-
+	padding: 58px 156px 147px;
+	width: 100%;
+	position: relative;
+	// padding-top: 58px;
+	// padding-bottom: 147px;
 }
 
 .container-page {
-    width: 100vw;
-    height: 100vh;
-    // position: relative;
-    @media(max-width: 1000px){
-        height: unset;
-    }
+	width: 100vw;
+	height: 100vh;
+	// position: relative;
+	@media (max-width: 1000px) {
+		height: unset;
+	}
 }
 
 .container-content {
-    padding: 30px 100px;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    // overflow: hidden;
+	padding: 30px 100px;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	// overflow: hidden;
 
-    @media (max-width: 1439px) {
-        padding: 16px 75px;
-    }
+	@media (max-width: 1439px) {
+		padding: 16px 75px;
+	}
 
-    @media (max-width: 1023px) {
-        padding: 11px 53px;
-    }
+	@media (max-width: 1023px) {
+		padding: 11px 53px;
+	}
 
-    @media (max-width: 1000px) {
-        padding: 0 77px;
-        padding-top: 11px;
-        &--no-margin {
-            padding: 0 52px;
-            padding-top: 11px;
-        }
-        &--no-padding {
-            padding: unset;
-        }
-    }
+	@media (max-width: 1000px) {
+		padding: 0 77px;
+		padding-top: 11px;
+		&--no-margin {
+			padding: 0 52px;
+			padding-top: 11px;
+		}
+		&--no-padding {
+			padding: unset;
+		}
+	}
 
-    @media (max-width: 680px) {
-        padding: 11px 20px;
-        &--no-padding {
-            padding: unset;
-        }
-    }
+	@media (max-width: 680px) {
+		padding: 11px 20px;
+		&--no-padding {
+			padding: unset;
+		}
+	}
 }
 
 .container-relative {
-    width: 100%;
-    height: 100%;
-    position: relative;
+	width: 100%;
+	height: 100%;
+	position: relative;
 
-    &--z-index {
-        z-index: 1;
-    }
+	&--z-index {
+		z-index: 1;
+	}
 }
 
 .absolutX-center {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	z-index: 1;
 }
 
 .abolusteY-center {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 1;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	z-index: 1;
 }
 
 .for-desc-block {
-    display: block;
+	display: block;
 
-    @media(max-width: 1000px) {
-        display: none !important;
-    }
+	@media (max-width: 1000px) {
+		display: none !important;
+	}
 }
 
 .for-mob-block {
-    display: block;
+	display: block;
 
-    @media(min-width: 1001px) {
-        display: none !important;
-    }
+	@media (min-width: 1001px) {
+		display: none !important;
+	}
 }
 
 .for-desc-flex {
-    display: flex;
+	display: flex;
 
-    @media(max-width: 1000px) {
-        display: none !important;
-    }
+	@media (max-width: 1000px) {
+		display: none !important;
+	}
 }
 
 .for-mob-flex {
-    display: flex;
-
-    @media(min-width: 1001px) {
-        display: none !important;
-    }
+	display: flex;
+	@media (min-width: 1001px) {
+		display: none !important;
+	}
 }
 
+.width-1600-more {
+	display: block;
+	@media (max-width: 1600px) {
+		display: none;
+	}
+}
+.width-1000-1600 {
+	display: none;
+	@media (min-width: 1000px) and (max-width: 1600px) {
+		display: block;
+	}
+}
 .width-1000-1300 {
-    display: none;
-    @media(min-width: 1001px) and (max-width: 1300px) {
-        display: block;
-    }
+	display: none;
+	@media (min-width: 1000px) and (max-width: 1300px) {
+		display: block;
+	}
 }
-.width-1300-more {
-    display: block;
-    @media(min-width: 1001px) and (max-width: 1300px) {
-        display: none;
-    }
+.width-1300-1600 {
+	display: none;
+	@media (min-width: 1300px) and (max-width: 1600px) {
+		display: block;
+	}
+}
+.width-900-1600 {
+	display: none;
+	@media (max-width: 900px), (min-width: 1600px) {
+		display: block;
+	}
+}
+.width-less-900 {
+	display: none;
+	@media (max-width: 900px) {
+		display: block;
+	}
 }
 
 .overflow-hidden {
-    overflow: hidden;
+	overflow: hidden;
 }
 
 .overflow-x-hidden {
-    overflow-x: hidden;
+	overflow-x: hidden;
 }
 .overflow-y-hidden {
-    overflow-y: hidden;
+	overflow-y: hidden;
 }
 .shadow {
-    filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.6));
+	filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.6));
 }
 .scrolling-content {
-    // @media(min-width: 1001px) {
-    //     scroll-snap-type: y mandatory;
-    //     height: 100vh;
-    //     overflow-x: hidden;
-    //     overflow-y: auto;
-    // }
+	// @media(min-width: 1001px) {
+	//     scroll-snap-type: y mandatory;
+	//     height: 100vh;
+	//     overflow-x: hidden;
+	//     overflow-y: auto;
+	// }
 }
 .scrolling-item {
-    // scroll-snap-align: start;
+	// scroll-snap-align: start;
 }
