--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
     background-color: #1D1D1D;
     margin-top: 40px;
+    position: relative;
 
     &__content {
         padding: unset;
