--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -23,8 +23,7 @@
 	height: 100vh;
 
 	&__bcg {
-		background: url(../../img/Product-page/hero-bg.png) no-repeat center center /
-			cover;
+		background: url(../../img/Product-page/hero-bg.png) no-repeat center center / cover;
 		filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.2));
 		border-radius: 40px;
 		overflow: hidden;
@@ -53,7 +52,7 @@
 
 .scroll-ico {
 	bottom: 20px;
-    z-index: 1;
+	z-index: 1;
 }
 
 .rama {
@@ -84,8 +83,7 @@
 		width: 115px;
 		height: 115px;
 		background-image: linear-gradient(90deg, #fbc2eb 0%, #a18cd1 100%);
-		filter: drop-shadow(0px 3px 7px rgba(23, 4, 47, 0.25))
-			drop-shadow(0px -3px 4px rgba(239, 175, 255, 0.19));
+		filter: drop-shadow(0px 3px 7px rgba(23, 4, 47, 0.25)) drop-shadow(0px -3px 4px rgba(239, 175, 255, 0.19));
 		border-radius: 100%;
 		transition: 0.5s;
 	}
@@ -177,7 +175,9 @@
 		// max-height: 440px;
 
 		&::before {
-			content: unset;
+			top: 22%;
+			width: 70px;
+			height: 70px;
 		}
 	}
 
@@ -205,14 +205,24 @@
 }
 
 @media (max-width: 800px) {
-	.first-screen {
-	}
+	.first-screen {}
 }
 
-@media (max-width: 420px) {
+@media (max-width: 460px) {
 	.first-screen {
 		&__first-title {
 			font-size: 24px;
+		}
+	}
+
+	.rama {
+		height: 50%;
+		width: 100%;
+		bottom: 50px;
+
+		&::before {
+			left: 67%;
+			top: 28%;
 		}
 	}
 }
@@ -497,8 +507,7 @@
 // THIRD SCREEN
 
 .third-screen {
-	background: url("../../img/Product-page/3-bg.png") no-repeat center
-		center/cover;
+	background: url("../../img/Product-page/3-bg.png") no-repeat center center/cover;
 	position: relative;
 
 	&::before {
@@ -531,7 +540,7 @@
 		align-items: center;
 		gap: calc($index * 1.5);
 		position: absolute;
-		// opacity: 0;
+		opacity: 0;
 		max-width: 1072px;
 
 		h2 {
@@ -571,8 +580,7 @@
 			font-weight: bold;
 		}
 
-		img {
-		}
+		img {}
 	}
 }
 
@@ -619,6 +627,7 @@
 
 			&:first-child {
 				display: flex;
+				opacity: 1;
 			}
 		}
 
@@ -641,8 +650,7 @@
 	height: 100vh;
 
 	&__bcg {
-		background: url(../../img/Product-page/4-screen-bg1.png) no-repeat center
-			center / cover;
+		background: url(../../img/Product-page/4-screen-bg1.png) no-repeat center center / cover;
 		filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.2));
 		border-radius: 40px;
 		overflow: hidden;
@@ -894,7 +902,7 @@
 		justify-content: center;
 		mix-blend-mode: lighten;
 		@include fontSize(93, 30, 1800) // font-size: 96px;
-;
+		;
 	}
 
 	&__button {
@@ -955,14 +963,17 @@
 		width: 100%;
 	}
 }
+
 .rent-content__title.dop-screen2__title {
 	font-size: 44.34px;
 	font-weight: 400;
 }
+
 .rent-content__tabs.dop-screen2__tabs {
 	margin-top: 16px;
 	flex-wrap: wrap;
 }
+
 .rent-content__tab.dop-screen2__tab {
 	width: unset;
 	max-width: unset;
@@ -982,6 +993,7 @@
 		flex-wrap: wrap;
 		row-gap: 20px;
 	}
+
 	.rent-content__tab.dop-screen2__tab {
 		width: 100%;
 		max-width: 50%;
@@ -1009,12 +1021,15 @@
 	.dop-screen2__left-part {
 		margin-top: 17px;
 	}
+
 	.rent-content__title.dop-screen2__title {
 		font-size: 24px;
 	}
+
 	.dop-screen2__tab-contents {
 		margin-top: 7px;
 	}
+
 	.dop-screen2__tab-content {
 		font-size: 14px;
 	}
@@ -1062,6 +1077,7 @@
 		// max-width: calc($index * 20);
 		width: 100%;
 	}
+
 	&__left-part {
 		margin-right: 30px;
 		display: flex;
@@ -1069,10 +1085,12 @@
 		gap: 30px;
 		align-items: flex-start;
 	}
+
 	&__left-part-downer {
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
+
 		@media (max-width: 900px) {
 			display: none;
 		}
@@ -1236,7 +1254,7 @@
 			width: 100%;
 		}
 
-		& > p {
+		&>p {
 			align-self: center;
 			color: rgba(29, 12, 51, 0.8);
 			font-size: 12px;
@@ -1256,8 +1274,7 @@
 		}
 	}
 
-	&__submit {
-	}
+	&__submit {}
 }
 
 .form-item {
@@ -1341,7 +1358,7 @@
 		flex-direction: column;
 	}
 
-	.rent-content-form__row > p {
+	.rent-content-form__row>p {
 		text-align: center;
 	}
 
@@ -1360,7 +1377,7 @@
 		flex-direction: column;
 	}
 
-	.rent-content-form__row > p {
+	.rent-content-form__row>p {
 		text-align: center;
 	}
 
@@ -1416,6 +1433,7 @@
 		flex-direction: column;
 		gap: 35px;
 	}
+
 	.sixth-screen__left-part {
 		max-width: unset;
 		margin: 0;
@@ -1452,7 +1470,7 @@
 		&__row {
 			flex-direction: column;
 
-			& > p {
+			&>p {
 				max-width: 285px;
 				text-align: center;
 			}
@@ -1466,6 +1484,7 @@
 		padding: 5px 0;
 	}
 }
+
 //Седьмой экран
 
 .seventh-screen {
@@ -1642,8 +1661,7 @@
 
 @media (max-width: 1000px) {
 	.dop-screen {
-		&__content-wrapper {
-		}
+		&__content-wrapper {}
 
 		&__desc {
 			font-size: 20px;
@@ -1762,14 +1780,12 @@
 	}
 }
 
-@media (max-width: 1650px) {
-}
+@media (max-width: 1650px) {}
 
-@media (max-width: 1000px) {
-	.rama::before {
-		width: 70px;
-		height: 70px;
-		top: 39%;
-		left: 65%;
-	}
-}
+// @media (max-width: 1000px) {
+// 	.rama::before {
+
+// 		top: 39%;
+// 		left: 65%;
+// 	}
+// }
