--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,6 +20,7 @@
 @import "blocks/socials";
 @import "blocks/footer";
 @import "blocks/burger";
+@import "blocks/topBtn";
 
 // body {
 //     overflow: hidden;
