--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -5,6 +5,9 @@
 	top: 30px;
 	padding: 0 100px;
 	transition: 0.3s all;
+	// max-width: 1925px;
+	left: 50%;
+	transform: translateX(-50%);
 
 	&__desc {
 		width: 100%;
@@ -28,6 +31,18 @@
 		flex-direction: row;
 		justify-content: space-between;
 		gap: 52px;
+	}
+
+	&__submenu {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		padding: 13px 45px;
+		border-top: 1px #f0f0f0 solid;
+
+		li {
+			font-size: 9px;
+		}
 	}
 
 	&__nav {
@@ -57,6 +72,7 @@
 			&--mob-scroll {
 				padding: 0 0 0 10px;
 			}
+
 			&--mob-top {
 				background-color: white;
 				border-radius: 10px;
@@ -151,6 +167,7 @@
 		align-items: center;
 		z-index: 2;
 	}
+
 	.header__desc {
 		width: 100%;
 		display: flex;
