--- a/src/scss/options/_common.scss
+++ b/src/scss/options/_common.scss
@@ -4,8 +4,8 @@
 	height: calc(100vh - 70px);
 	// margin: 0 auto;
 	position: relative;
-	max-height: 969px;
-	max-width: 1825px;
+	// max-height: 969px;
+	// max-width: 1825px;
 	margin: 20px auto;
 	// transition: .3s;
 
