--- a/src/scss/ui/_buttons.scss
+++ b/src/scss/ui/_buttons.scss
@@ -42,6 +42,7 @@
         max-width: unset;
         @media(max-width: 1000px) {
             font-size: 12px;
+            max-width: 320px;
         }
     }
 }
