--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -33,15 +33,41 @@
 		gap: 52px;
 	}
 
+	&__subnav {
+		display: none;
+	}
+	&__subnav.active {
+		display: block;
+	}
+
 	&__submenu {
 		display: flex;
 		flex-direction: row;
-		justify-content: space-between;
-		padding: 13px 45px;
+		justify-content: flex-end;
+		gap: 2%;
+		padding: 13px 15px;
 		border-top: 1px #f0f0f0 solid;
+		
+		a {
+			padding: 5px 11px;
+			transition: .3s;
+			background: transparent;
+			font-weight: 300;
+			border-radius: 15px;
+
+		}
+
+		a.active {
+			border-radius: 15px;
+			background: linear-gradient(57deg, #1D0C33 0%, #D283EA 100%);
+			padding: 5px 11px;
+			font-weight: 300;
+			color: #f0f0f0;
+			box-shadow: 0px 5px 7px 0px rgba(23, 4, 47, 0.25), 0px -3px 4px 0px rgba(239, 175, 255, 0.19);
+		}
 
 		li {
-			font-size: 9px;
+			font-size: 13px;
 		}
 	}
 
