--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -74,24 +74,33 @@
 	z-index: -1;
 	transition: 2s;
 
-	&::before {
-		content: "";
-		opacity: 0;
-		position: absolute;
-		top: 33%;
-		left: 60%;
-		width: 115px;
-		height: 115px;
-		background-image: linear-gradient(90deg, #fbc2eb 0%, #a18cd1 100%);
-		filter: drop-shadow(0px 3px 7px rgba(23, 4, 47, 0.25)) drop-shadow(0px -3px 4px rgba(239, 175, 255, 0.19));
-		border-radius: 100%;
-		transition: 0.5s;
-	}
+	// &::before {
+	// 	content: "";
+	// 	opacity: 0;
+	// 	position: absolute;
+	// 	top: 33%;
+	// 	left: 60%;
+	// 	width: 115px;
+	// 	height: 115px;
+	// 	background-image: linear-gradient(90deg, #fbc2eb 0%, #a18cd1 100%);
+	// 	filter: drop-shadow(0px 3px 7px rgba(23, 4, 47, 0.25)) drop-shadow(0px -3px 4px rgba(239, 175, 255, 0.19));
+	// 	border-radius: 100%;
+	// 	transition: 0.5s;
+	// }
 
-	&--circle {
-		&::before {
-			opacity: 1;
-		}
+	// &--circle {
+	// 	&::before {
+	// 		opacity: 0;
+	// 	}
+	// }
+}
+
+@media(min-width: 383px) and (max-width: 460px) and (min-height: 500px) {
+	.rama {
+		height: 66%;
+	}
+	.first-screen__first-title {
+		font-size: 28px;
 	}
 }
 
@@ -138,11 +147,11 @@
 		max-width: 300px;
 		max-height: 391px;
 
-		&--circle {
-			&::before {
-				opacity: 0;
-			}
-		}
+		// &--circle {
+		// 	&::before {
+		// 		opacity: 0;
+		// 	}
+		// }
 	}
 
 	.first-screen {
@@ -168,11 +177,11 @@
 		max-width: 300px;
 		max-height: 391px;
 
-		&--circle {
-			&::before {
-				opacity: 0;
-			}
-		}
+		// &--circle {
+		// 	&::before {
+		// 		opacity: 0;
+		// 	}
+		// }
 	}
 }
 
@@ -187,11 +196,11 @@
 		// max-width: 350px;
 		// max-height: 440px;
 
-		&::before {
-			top: 22%;
-			width: 70px;
-			height: 70px;
-		}
+		// &::before {
+		// 	top: 22%;
+		// 	width: 70px;
+		// 	height: 70px;
+		// }
 	}
 
 	.first-screen {
@@ -217,26 +226,22 @@
 	}
 }
 
-@media (max-width: 800px) {
-	.first-screen {}
-}
-
 @media (max-width: 460px) {
 	.first-screen {
 		&__first-title {
-			font-size: 24px;
+			font-size: 26px;
 		}
 	}
 
 	.rama {
-		height: 50%;
+		height: 60%;
 		width: 100%;
 		bottom: 50px;
 
-		&::before {
-			left: 67%;
-			top: 28%;
-		}
+		// &::before {
+		// 	left: 67%;
+		// 	top: 28%;
+		// }
 	}
 }
 
@@ -436,6 +441,7 @@
 			gap: 40px;
 			margin-top: 50px;
 		}
+
 		&__container {
 			padding: 0 30px;
 		}
@@ -448,16 +454,6 @@
 			img {
 				max-width: 300px;
 			}
-		}
-
-		&__text {
-			// h2 {
-			//     font-size: 39.468px;
-			// }
-
-			// p {
-			//     font-size: 19.734px;
-			// }
 		}
 
 		&__tabs {
@@ -511,12 +507,6 @@
 	.second-screen {
 		&__buttons {
 			flex-wrap: wrap;
-		}
-
-		&__text {
-			// h2 {
-			//     font-size: 26px;
-			// }
 		}
 	}
 }
@@ -957,7 +947,7 @@
 	}
 }
 
-body > main > main > div.content > section:nth-child(6) {
+body>main>main>div.content>section:nth-child(6) {
 	width: unset;
 	height: unset;
 }
@@ -1119,6 +1109,7 @@ body > main > main > div.content > section:nth-child(6) {
 		position: relative;
 		border-radius: 30px;
 		filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.3));
+
 		@media(min-width: 1000px) {
 			height: 90%;
 		}
@@ -1156,6 +1147,7 @@ body > main > main > div.content > section:nth-child(6) {
 		}
 	}
 }
+
 .sixth-screen__container.container-content {
 	padding: 40px 100px 0;
 }
@@ -1336,16 +1328,10 @@ body > main > main > div.content > section:nth-child(6) {
 			}
 		}
 	}
-
-	&__submit {}
 }
 
 .form-item {
 	width: 100%;
-
-	&:nth-child(1) {
-		// max-width: 196px;
-	}
 }
 
 .list-wrapper {
@@ -1568,13 +1554,17 @@ body > main > main > div.content > section:nth-child(6) {
 		padding-bottom: 30px;
 		margin: unset;
 	}
+
 	.sixth-screen.container-content {
 		padding-bottom: 52px;
 	}
+
 	.sixth-screen__container.container-content {
 		padding: 30px 10px;
 	}
-	.tab-content__key, .tab-content__value {
+
+	.tab-content__key,
+	.tab-content__value {
 		padding: 9px 20px;
 	}
 }
@@ -1605,11 +1595,17 @@ body > main > main > div.content > section:nth-child(6) {
 
 	&__swiper-slide {
 		border-radius: 40px;
-		overflow: hidden;
+		// overflow: hidden;
 	}
 
-	&__slide-img {
-		height: 100%;
+	&__swiper-nav {
+		display: none;
+	}
+
+	.swiper-slide.seventh-screen__swiper-slide>img {
+		object-fit: cover;
+		border-radius: 40px;
+		// height: unset;
 	}
 
 	.rent-content-swiper__nav.seventh-screen__swiper-nav {
@@ -1619,13 +1615,19 @@ body > main > main > div.content > section:nth-child(6) {
 	}
 }
 
-#portfolio > div {
+#portfolio {
+	height: 100%;
+}
+
+#portfolio>div {
 	height: calc(100vh - 150px);
 }
 
 @media (max-width: 1000px) {
+
 	.seventh-screen {
 		margin-top: 30px;
+
 		&__bcg {
 			border-radius: 11px;
 		}
@@ -1633,6 +1635,14 @@ body > main > main > div.content > section:nth-child(6) {
 		.container-page-margin {
 			height: calc(100vh - 36px);
 		}
+	}
+
+	.seventh-screen__swiper-nav {
+		display: flex;
+	}
+
+	.swiper-slide.seventh-screen__swiper-slide>img {
+		object-fit: cover;
 	}
 }
 
@@ -1760,14 +1770,6 @@ body > main > main > div.content > section:nth-child(6) {
 	z-index: 0;
 }
 
-@media (max-width: 1640px) {
-	.dop-screen {
-		&__downer-part {
-			// height: 50%;
-		}
-	}
-}
-
 @media (max-width: 1440px) {
 	.dop-screen {
 		&__downer-part {
@@ -1810,7 +1812,6 @@ body > main > main > div.content > section:nth-child(6) {
 
 @media (max-width: 1000px) {
 	.dop-screen {
-		&__content-wrapper {}
 
 		&__desc {
 			font-size: 20px;
