--- a/src/scss/options/_swiper.scss
+++ b/src/scss/options/_swiper.scss
@@ -37,7 +37,7 @@
     width: 61px;
     height: 61px;
     font-family: unset;
-    content: url('../../img/ico/arrow-left.svg');
+    content: url('../../img/ico/circle.svg');
 }
 
 .swiper-button-next.rent-content-right::after {
