--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -2,19 +2,19 @@
 	width: 100%;
 	position: fixed;
 	z-index: 1;
-	top: 30px;
-	padding: 0 100px;
+	//top: 30px;
+	//padding: 0 100px;
 	transition: 0.3s all;
 	// max-width: 1925px;
-	left: 50%;
-	transform: translateX(-50%);
+	//left: 50%;
+	//transform: translateX(-50%);
 
 	&__desc {
 		width: 100%;
 		transition: 0.3s all;
 		background-color: #fff;
-		border-radius: 25px;
-		box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.2);
+		//border-radius: 25px;
+		box-shadow: 0px 0px 18px 0px rgba(35, 39, 121, 0.10);
 	}
 
 	&__wrapper {
@@ -102,8 +102,8 @@
 			&--mob-top {
 				background-color: white;
 				border-radius: 10px;
-				box-shadow: 0px 0px 3.64583px 0px rgba(0, 0, 0, 0.2);
-				padding: 5px 7px;
+				//box-shadow: 0px 0px 3.64583px 0px rgba(0, 0, 0, 0.2);
+				padding: 5px 7px 5px 15px;
 			}
 
 			&--mob-menu {
@@ -183,8 +183,8 @@
 
 @media (max-width: 1000px) {
 	.header {
-		padding: 0 20px;
-		background-color: unset;
+		//padding: 20px 20px 0;
+		//background-color: unset;
 		border-radius: unset;
 		box-shadow: unset;
 		display: flex;
@@ -199,6 +199,6 @@
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
-		background-color: unset;
+		//background-color: unset;
 	}
 }
