--- a/src/scss/ui/_buttons.scss
+++ b/src/scss/ui/_buttons.scss
@@ -46,3 +46,16 @@
         }
     }
 }
+
+.button_submit {
+    @media (max-width: 650px) {
+        max-width: unset;
+        width: 100%;
+        height: 43px;
+        border-radius: 11px;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 700;
+        text-transform: unset;
+    }
+}
