--- a/src/scss/ui/_text.scss
+++ b/src/scss/ui/_text.scss
@@ -57,23 +57,23 @@
     @media(max-width: 1024px) {
         font-size: 30px;
     }
-    @media(max-width: 700) {
-        font-size: 20px;
+    @media(max-width: 550px) {
+        font-size: 25px;
     }
-    @media(max-width: 400px) {
-        font-size: 15px;
-    }
+    //@media(max-width: 400px) {
+    //    font-size: 15px;
+    //}
 }
 .desc-section {
     font-size: 20px;
     @media(max-width: 1440) {
         font-size: 15px;
     }
-    @media(max-width: 550) {
-        font-size: 11px;
+    @media(max-width: 550px) {
+        font-size: 16px;
     }
-    @media(max-width: 400px) {
-        font-size: 10px;
-    }
+    //@media(max-width: 400px) {
+    //    font-size: 10px;
+    //}
 }
 
