--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -21,7 +21,7 @@
 		display: flex;
 		flex-direction: row;
 		padding: 11px 15px 11px 45px;
-		justify-content: space-between;
+		//justify-content: space-between;
 		gap: 40px;
 		align-items: center;
 	}
@@ -148,7 +148,7 @@
 @media (max-width: 1750px) {
 	.header {
 		&__wrapper {
-			gap: 20px;
+			gap: 40px;
 		}
 
 		&__nav {
