--- a/src/scss/blocks/_burger.scss
+++ b/src/scss/blocks/_burger.scss
@@ -97,11 +97,11 @@
 	&__buttons {
 		width: 100%;
 		display: flex;
-		flex-direction: column;
+		//flex-direction: column;
 		gap: 20px;
 	}
 	&__button {
-		max-width: 360px;
+		max-width: 200px;
 		width: 100%;
 		font-size: 16px;
 		text-transform: capitalize;
