--- a/src/scss/blocks/_topBtn.scss
+++ b/src/scss/blocks/_topBtn.scss
@@ -4,7 +4,7 @@
 
     position: fixed;
     bottom: 33px;
-    right: 53px;
+    left: 53px;
     z-index: 1;
 
     filter: drop-shadow(1px 2px 9px rgba(30, 14, 54, 0.25));
