--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -341,7 +341,7 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	padding: 10px 20px;
+	padding: 10px 40px;
 
 	background-color: rgba(120, 113, 165, 0.12);
 	border-radius: 27px;
@@ -478,7 +478,7 @@
 	}
 
 	.tab {
-		padding: 0 20px;
+		padding: 0 30px;
 		height: 38px;
 		gap: 5.5px;
 		position: relative;
@@ -489,7 +489,7 @@
 			position: absolute;
 			left: 10px;
 			top: 50%;
-			transform: translateY(-5px);
+			transform: translateY(-50%);
 		}
 
 		&__key {
@@ -1028,6 +1028,9 @@ body>main>main>div.content>section:nth-child(6) {
 		padding: 13px 0;
 		font-size: 13px;
 	}
+	.rent-content__tab-key {
+		font-size: 10px;
+	}
 }
 
 @media (max-width: 1195px) {
@@ -1276,7 +1279,7 @@ body>main>main>div.content>section:nth-child(6) {
 			background-color: #7c44a8;
 			left: 20px;
 			top: 50%;
-			transform: translateY(calc(-50% - 1px));
+			transform: translateY(-50%);
 		}
 	}
 }
@@ -1316,7 +1319,7 @@ body>main>main>div.content>section:nth-child(6) {
 		input {
 			border-radius: 20px;
 			border: 1px solid $purple-text;
-			padding: 12px 36px;
+			padding: 12px 20px;
 			width: 100%;
 		}
 
@@ -1380,40 +1383,57 @@ body>main>main>div.content>section:nth-child(6) {
 	//}
 }
 
-.rent-content__conditionals {
-	margin-top: 27px;
+.rent-content {
+	&__conditionals {
+		margin-top: 27px;
 
-	p {
-		background: $purple-to-pink;
-		background-clip: text;
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		font-size: 11px;
-		font-style: normal;
-		font-weight: bold;
-		text-transform: uppercase;
-	}
-
-	&-items {
-		margin-top: 16px;
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		column-gap: 45px;
-		row-gap: 6px;
-	}
-
-	&-tab {
-		width: max-content;
-		height: 38px;
-		&:nth-child(1) {
-			position: relative;
-			padding-right: 60px;
+		p {
+			background: $purple-to-pink;
+			background-clip: text;
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+			font-size: 11px;
+			font-style: normal;
+			font-weight: bold;
+			text-transform: uppercase;
 		}
 
-		div:nth-child(3) {
-			font-size: 13px;
+		&-items {
+			margin-top: 16px;
+			display: flex;
+			flex-direction: row;
+			flex-wrap: wrap;
+			column-gap: 45px;
+			row-gap: 6px;
 		}
+
+		&-tab {
+			width: max-content;
+			height: 38px;
+			padding: 0 30px;
+			&:nth-child(1) {
+				position: relative;
+				padding-right: 60px;
+			}
+
+			div:nth-child(3) {
+				font-size: 13px;
+			}
+		}
+	}
+	&__tab-dot {
+		position: relative;
+	}
+	&__tab-dot::before {
+		content: "";
+		position: absolute;
+		width: 6px;
+		height: 6px;
+		border-radius: 100%;
+		background-color: #7c44a8;
+		left: -20px;
+		top: 50%;
+		transform: translateY(-50%);
 	}
 }
 
@@ -1505,7 +1525,7 @@ body>main>main>div.content>section:nth-child(6) {
 		&__tab {
 			height: 27px;
 			font-size: 16px;
-			text-transform: lowercase;
+			//text-transform: lowercase;
 			font-weight: 400;
 		}
 	}
@@ -1565,7 +1585,7 @@ body>main>main>div.content>section:nth-child(6) {
 		&__conditionals-tab {
 			height: unset;
 			max-height: none;
-			padding: 10px 20px;
+			padding: 10px 30px;
 		}
 	}
 
@@ -1592,12 +1612,12 @@ body>main>main>div.content>section:nth-child(6) {
 		&>.second-screen__tab {
 			width: 100%;
 		}
-		&>.second-screen__tab {
-			justify-content: center;
-			&>.tab__key {
-				text-align: center;
-			}
-		}
+		//&>.second-screen__tab {
+		//	justify-content: center;
+		//	&>.tab__key {
+		//		text-align: center;
+		//	}
+		//}
 	}
 
 
@@ -1633,6 +1653,7 @@ body>main>main>div.content>section:nth-child(6) {
 //Седьмой экран
 
 .seventh-screen {
+	margin: 20px 0;
 	&__bcg {
 		// background: url(../../img/Product-page/7-screen-bg1.png) no-repeat top center / cover;
 		filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.2));
