--- a/src/scss/blocks/_topBtn.scss
+++ b/src/scss/blocks/_topBtn.scss
@@ -6,8 +6,14 @@
     bottom: 33px;
     left: 53px;
     z-index: 1;
+    cursor: pointer;
 
     filter: drop-shadow(1px 2px 9px rgba(30, 14, 54, 0.25));
     opacity: 0;
     transition: .2s;
+}
+
+#toTopBtn img:hover {
+    opacity: 0.9;
+    transition: opacity 0.3s;
 }
