--- a/src/scss/pages/_product-page.scss
+++ b/src/scss/pages/_product-page.scss
@@ -621,6 +621,17 @@
 	background-color: #fff;
 }
 
+.button.second-screen__button.third-screen__button:hover {
+	background: rgba(255, 255, 255, 0.50);;
+	color: rgba(126, 111, 147, 1);
+}
+
+.button.second-screen__button.third-screen__button:active {
+	border: 1px solid $purple-text;
+	background-color: transparent;
+	color: $purple-text;
+}
+
 @media (max-width: 1000px) {
 	.third-screen {
 		height: 100vh;
@@ -759,14 +770,15 @@
 		align-items: center;
 		background-color: #3e304e;
 		text-transform: none;
-		box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.2);
+		//box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.2);
+		transition: 0.3s all;
 
 		&--active {
 			border-radius: 20px;
 			background: linear-gradient(90deg, #3926ad 0%, #c367d6 100%) !important;
 			/* нажатая кнопка */
-			box-shadow: 0px 3px 7px 4px rgba(23, 4, 47, 0.25),
-				0px -3px 4px 0px rgba(239, 175, 255, 0.19);
+			//box-shadow: 0px 3px 7px 4px rgba(23, 4, 47, 0.25),
+			//	0px -3px 4px 0px rgba(239, 175, 255, 0.19);
 		}
 
 		p {
@@ -775,6 +787,12 @@
 			font-weight: normal;
 			letter-spacing: 0.26px;
 		}
+	}
+
+	&__button:hover {
+		background: rgba(139, 118, 145, 1);
+		color: rgba(188, 188, 188, 1);
+		transition: 0.3s all;
 	}
 }
 
@@ -1215,6 +1233,7 @@ body>main>main>div.content>section:nth-child(6) {
 			border: 1px solid #8322cf;
 		}
 
+
 		// &-content {
 		//     display: flex;
 		//     flex-direction: column;
@@ -1223,6 +1242,9 @@ body>main>main>div.content>section:nth-child(6) {
 		// }
 	}
 
+	&__tab:hover {
+		border: 1px solid rgba(154, 125, 192, 0.80);
+	}
 	&__tab-contents {
 		margin-top: 21px;
 	}
