--- a/src/scss/ui/_buttons.scss
+++ b/src/scss/ui/_buttons.scss
@@ -77,7 +77,7 @@
         border-radius: 11px;
         font-size: 18px;
         font-style: normal;
-        font-weight: 700;
+        //font-weight: 700;
         text-transform: unset;
     }
 }
