--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -29,7 +29,7 @@
 	&__menu {
 		display: flex;
 		flex-direction: row;
-		justify-content: space-between;
+		justify-content: space-around;
 		gap: 52px;
 	}
 
@@ -44,30 +44,30 @@
 		display: flex;
 		flex-direction: row;
 		justify-content: flex-end;
-		gap: 2%;
+		//gap: 2%;
 		padding: 13px 15px;
 		border-top: 1px #f0f0f0 solid;
-		
+
 		a {
 			padding: 5px 11px;
 			transition: .3s;
 			background: transparent;
 			font-weight: 300;
 			border-radius: 15px;
-
+			opacity: initial;
 		}
 
 		a.active {
 			border-radius: 15px;
 			background: linear-gradient(57deg, #1D0C33 0%, #D283EA 100%);
-			padding: 5px 11px;
+			padding: 5px 20px;
 			font-weight: 300;
 			color: #f0f0f0;
 			//box-shadow: 0px 5px 7px 0px rgba(23, 4, 47, 0.25), 0px -3px 4px 0px rgba(239, 175, 255, 0.19);
 		}
 
 		li {
-			font-size: 13px;
+			font-size: 11px;
 		}
 	}
 
