--- a/src/scss/ui/_buttons.scss
+++ b/src/scss/ui/_buttons.scss
@@ -51,7 +51,7 @@
     color: #fff;
 
     &--submit {
-        max-width: unset;
+        //max-width: unset;
         @media(max-width: 1000px) {
             font-size: 12px;
             max-width: 320px;
