--- a/src/scss/ui/_text.scss
+++ b/src/scss/ui/_text.scss
@@ -66,7 +66,7 @@
 }
 .desc-section {
     font-size: 20px;
-    @media(max-width: 1440) {
+    @media(max-width: 1440px) {
         font-size: 15px;
     }
     @media(max-width: 550px) {
