--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -44,27 +44,30 @@
 		display: flex;
 		flex-direction: row;
 		justify-content: flex-end;
-		//gap: 2%;
+		gap: 10px;
 		padding: 13px 15px;
 		border-top: 1px #f0f0f0 solid;
 
 		a {
+			border-radius: 15px;
 			padding: 5px 11px;
-			transition: .3s;
 			background: transparent;
 			font-weight: 300;
 			border-radius: 15px;
 			opacity: initial;
+			color: #000;
+			display: flex;
+			justify-content: center;
+			align-items: center;
 		}
 
 		a.active {
-			border-radius: 15px;
 			background: linear-gradient(57deg, #1D0C33 0%, #D283EA 100%);
-			padding: 5px 20px;
+			line-height: 9px;
 			font-weight: 300;
 			color: #f0f0f0;
-			transition: all 0.5s ease;
-			//box-shadow: 0px 5px 7px 0px rgba(23, 4, 47, 0.25), 0px -3px 4px 0px rgba(239, 175, 255, 0.19);
+			transition: background 0.5s ease;
+			box-shadow: 0px 5px 7px 0px rgba(23, 4, 47, 0.25), 0px -3px 4px 0px rgba(239, 175, 255, 0.19);
 		}
 
 		li {
